extend base.html to the templates

--- a/image/templates/all-images/past-image.html
+++ b/image/templates/all-images/past-image.html
@@ -1,5 +1,5 @@
-<!-- {%extends 'all-images/base.html'%}
+{%extends 'all-images/base.html'%}
 
 {% block content %}
 {{block.super}}
-{% endblock %} -->
+{% endblock %}
