--- a/image/templates/all-images/today-images.html
+++ b/image/templates/all-images/today-images.html
@@ -1,5 +1,5 @@
-<!-- {%extends 'all-images/base.html'%}
+{%extends 'all-images/base.html'%}
 
 {% block content %}
 {{block.super}}
-{% endblock %} -->
+{% endblock %}
