--- a/image/templates/all-images/base.html
+++ b/image/templates/all-images/base.html
@@ -13,13 +13,14 @@
 
   {% block styles %}
     {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/baseimages.css' %}">
   {% endblock %}
 
 </head>
 <body>
     {% include "navbar.html" %}
 
-    {% block content %} <h1 class='text-center'>Images for {{date|date:"l d-F Y"}}</h1> {%endblock%}
+    {% block content %} <h1 class='text-center'>Image for {{date|date:"l d-F Y"}}</h1> {%endblock%}
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
