add category name in the django admin

--- a/image/templates/all-images/today-images.html
+++ b/image/templates/all-images/today-images.html
@@ -5,15 +5,18 @@
 
 <div class="container">
 
-    <!-- Looping through news   -->
+    <!-- Looping through images   -->
     {% for image_item in image %}
   
     <div class="row">
-      <!-- displaying News articles -->
+      <!-- displaying Images titles -->
       <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         <h2 class="text-center"> {{ image_item.title }} </h2>
       </div>
-  
+      <!--Display images  -->
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <img src="{{image_item.image_image.url}}" class="img-responsive" alt="Image">
+      </div>
     </div>
   
     {% empty %}
