pictures displayed on the home page

--- a/image/templates/all-images/search.html
+++ b/image/templates/all-images/search.html
@@ -16,7 +16,8 @@
   {% if images %}
     {% for image in images %}
       <div class="col-sm-6 col-md-3">
-          <h1>{{image.title}}</h1>
+          <h1>{{image.name}}</h1>
+          <img src="{{image.Images_image.url}}" class="img-responsive w-100 btn btn-outline-info" alt="image">
       </div>
     {% endfor %}
   {% endif %}
