--- a/image/templates/all-images/view.html
+++ b/image/templates/all-images/view.html
@@ -1,4 +1,4 @@
-{% include 'photo/base.html' %}
+{% include 'all-images/base.html' %}
 {% block content %}
 <section id="gallery">
   <div class="container">
@@ -6,7 +6,7 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-body">
-            <img src="{{image.image.url}}" alt="image" >
+            <img src="{{image.Image_image.url}}" alt="image" >
            </div>
         </div>
       </div>
