--- a/static/css/baseimages.css
+++ b/static/css/baseimages.css
@@ -5,3 +5,20 @@ h1
 body {
   background-color: grey;
 }
+.thumbnails img:hover{
+  opacity: 1;
+  /* transform: rotate3d(30deg); */
+  /* box-shadow: 0 0 7px rgba(0, 0, 0, .5) */
+}
+
+.thumbnails:hover img{
+ 
+  opacity: .6;
+  /* transform: scale(.92) */
+  -webkit-filter: sepia(0);
+filter: sepia(0);
+}
+.thumbnails img{
+  transition: all .6s ease-in;
+}
+
