add google fonts to the project

--- a/image/templates/all-images/base.html
+++ b/image/templates/all-images/base.html
@@ -9,6 +9,8 @@
   <title>Image-Gallery - {{title}}</title>
   {% else %}
     <title> Image-Gallery </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
   {% endif %}
 
   {% block styles %}
