delete some images

--- a/image/templates/all-images/past-image.html
+++ b/image/templates/all-images/past-image.html
@@ -9,9 +9,9 @@
     {% for image_item in image %}
   
     <div class="row">
-      <!-- displaying News articles -->
+      <!-- displaying Images -->
       <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <h2 class="text-center"> {{ image_item.title }} </h2>
+        <h2 class="text-center"> {{ image_item.name }} </h2>
       </div>
   
     </div>
